2015-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/echo-area.c (input_line_prompt): Remove unused variable.
	(PUSHED_EA): Remove unused field 'prompt'.

2015-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (parser) <INLINE_INSERTCOPYING>: Change
	"insercopying" to "insertcopying".

2015-09-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Mention q can close a window, mention index and TOC 
	formatting changes, mention @deffn formatting change.

2015-09-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_quit),
	* TODO: Make q close a window if there's more than one on the 
	screen.

2015-09-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infomap.c (default_emacs_like_info_keys),
	* info/info-stnd.texi (Searching Commands): Make '?' search 
	backwards, for consistency with 'less'.

2015-09-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infomap.c (default_emacs_like_info_keys),
	* info/info-stnd.texi (Miscellaneous Commands):
	Make C-h scroll backwards, in case the terminal sends C-h for 
	the delete or backspace key.

2015-09-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (@table): Change "tables" plural to "table" 
	singular.  Remove word "Texinfo" qualifying "command".  Add a 
	comma before "such as".  Change "It" to "This command".  Change 
	"definition lists" in quotation marks to "list of definitions".
	Join second and third paragraphs to reduce ambiguity about what 
	"This command" refers to.  Change "that goes into" into "in", 
	and delete "and thus determines how it will be highlighted." and 
	delete "of each item".  In paragraph about @asis, Delete word 
	"also", and change a semicolon into a colon.  Delete word 
	"normally", and change "but" to "although".  Change "first 
	column text" to "text for the first column", and "second column 
	text" to "text for the second column".  Move material about an 
	empty second column to end of paragraph, and change "column 